src/test/ui/parser/recovery-attr-on-if.stderr
error: cannot find attribute `attr` in this scope
  --> $DIR/recovery-attr-on-if.rs:4:7
   |
LL |     #[attr] if true {};
   |       ^^^^

error: cannot find attribute `attr` in this scope
  --> $DIR/recovery-attr-on-if.rs:2:7
   |
LL |     #[attr] if true {};
   |       ^^^^

error[E0308]: mismatched types
  --> $DIR/recovery-attr-on-if.rs:6:33
   |
LL |     let _recovery_witness: () = 0;
   |                            --   ^ expected `()`, found integer
   |                            |
   |                            expected due to this

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
